# cointainer-scraper-ecb

./: .gitignore  CHANGELOG.md  LICENSE  LICENSING.md  README.md  create_de_en_countries.py  pyproject.toml
coin_collector_parser_ecb/: coins.py
coin_collector_scraper_ecb/: coins.py
cointainer_scraper_ecb/: __init__.py  coins.py  countries.json
scripts/: create_de_en_countries.py  get_volume_suffix_words.py
tests/: test_coin_collector_parser_ecb.py  test_coins.py  test_cointainer_scraper_ecb.py
tests/data/: comm_2004.en.html  comm_2005.en.html  comm_2006.en.html  comm_2007.en.html  comm_2008.en.html  comm_2009.en.html  comm_2010.en.html  comm_2012.en.html  comm_2013.en.html  comm_2014.en.html  comm_2015.en.html  comm_2016.en.html  comm_2017.en.html  comm_2018.en.html  comm_2019.en.html  comm_2021.en.html  download-test-files.ps1  download-test-files.sh
typings/bs4/: __init__.pyi  dammit.pyi  diagnose.pyi  element.pyi  formatter.pyi
typings/bs4/builder/: __init__.pyi
typings/pycountry/: __init__.pyi  db.pyi
