[tool.poetry]
name = "coin-collector-scraper-ecb"
version = "0.1.0"
description = ""
authors = ["B4rtware <34386047+B4rtware@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pycountry = "^22.3.5"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
dateparser = "^1.1.0"
regex = "2022.3.2" # Is needed because the version 2022.3.15 breaks the dataparser package: https://github.com/scrapinghub/dateparser/issues/1045

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
black = "^22.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
