[tool.poetry]
name = "cointainer-scraper-ecb"
version = "0.1.0"
description = "Cointainer component for scraping coins from the ECB Website."
authors = ["B4rtware <34386047+B4rtware@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pycountry = "^22.3.5"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
dateparser = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.270"
pytest = "^7.1.3"
black = "^22.8.0"

[tool.pyright]
include = ["cointainer_scraper_ecb"]
exclude = ["scripts"]
typeCheckingMode = "strict"
reportImplicitStringConcatenation = "error"
reportPropertyTypeMismatch = "error"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
