[tool.poetry]
name = "cointainer-scraper-ecb"
version = "0.1.1"
description = "Cointainer component for scraping coins from the ECB Website."
authors = ["B4rtware <34386047+B4rtware@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "cointainer_scraper_ecb" }]
license = "Apache-2.0"
repository = "https://github.com/cointainer/cointainer-scraper-ecb"
homepage = "https://github.com/cointainer/cointainer-scraper-ecb"
keywords = ["scraper", "ecb", "coins", "collectables"]
include = ["CHANGELOG.md"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Topic :: Internet"
]

[tool.poetry.dependencies]
python = "^3.9"
pycountry = "^22.3.5"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
dateparser = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.270"
pytest = "^7.1.3"
black = "^22.8.0"
pyupgrade = "^2.37.3"
isort = "^5.10.1"
requests-mock = "^1.10.0"

[tool.pyright]
include = ["cointainer_scraper_ecb"]
exclude = ["scripts"]
typeCheckingMode = "strict"
reportImplicitStringConcatenation = "error"
reportPropertyTypeMismatch = "error"

[tool.isort]
src_paths = ["cointainer_scraper_ecb", "tests", "scripts"]
profile = "black"
line_length = 88
skip=["typings"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
